# inoui

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  camera.xml  configure.ac  launch_inoui.lunch  run
assets/: Makefile  main.c
data/: Makefile.am  camera.xml  map.xml  project.xml  reacTIVision.xml
doc/: Makefile  conversion_zoom_to_b.txt  intentions.rst  lieux.txt  priorities.txt
patches/: inoui.alternate.pd  inoui.player~.pd  inoui.tests.pd  main.pd  run-pd.sh
prototypes/blink/: NOTES-aalex.txt  blink.c
prototypes/pyo_stuff/: simplest.py
prototypes/tuio/: Makefile  main.cpp  reacTIVision.xml  run-reactivision
src/: Makefile.am  avatar.cpp  avatar.h  circle.cpp  circle.h  fudi_sender.cpp  fudi_sender.h  grid.cpp  grid.h  main.cpp  map.cpp  map.h  maths.cpp  maths.h  point.cpp  point.h  pprint.cpp  pprint.h  soundinfo.cpp  soundinfo.h  statesaving.cpp  statesaving.h  timer.cpp  timer.h  unused.h
tests/: Makefile.am  check_distance.cpp  check_soundinfo.cpp
utils/: combine.sh  install_deps.sh  resample.sh
